@@ -1,217 +1,0 @@
-                                Leafnode FAQ
-   
-   Last update 12 Feb 2000
-   
-   This document contains answers to some commonly encountered problems.
-   The questions discussed are:
-    1. Leafnode does not compile on my system.
-    2. I want to change my upstream server.
-    3. I cannot connect to my newsserver.
-    4. tin complains about a missing file "/var/lib/news/active".
-    5. When searching news with Netscape, I only get back "unknown
-       command".
-    6. fetchnews does not fetch any articles.
-    7. When fetching articles, the connection is interrupted by the
-       pppd.
-    8. fetchnews crashes with a segmentation fault.
-    9. My news reader complains about repeated frequent timeouts of
-       the NNTP server.
-   10. leafnode generates incorrect/incomplete message IDs.
-   11. fetchnews has problems retrieving new newsgroups.
-   12. texpire does not expire articles.
-   13. When running leafnode in "delaybody" mode, I can only view the
-       headers with Netscape/Outlook Express.
-   14. I want to switch off the automatic expiring of newsgroups.
-     _________________________________________________________________
-   
-   A good way to approach communication problems with leafnode is to
-   switch on the debugmode. This is done by putting "debugmode = 1" into
-   the leafnode configuration file and then turning on the logging of the
-   "debug" priority for the facility "news" in /etc/syslogd.conf. To turn
-   on logging, do the following:
-    1. Put into /etc/syslogd.conf a line which looks like the one below:
-     news.=debug     /var/log/news.debug
-       It is mandatory that the two fields be separated by a tab, not
-       spaces.
-    2. Become root and restart the syslog daemon:
-     kill -HUP `cat /var/run/syslog.pid`
-       or
-     kill -HUP `cat /var/run/syslogd.pid`
-       (depends on your distribution).
-       
-   Be warned that the leafnode programs write a lot of information to
-   this channel.
-   
-   Comments or additions should be sent to Cornelius Krasel
-   <krasel@wpxx02.toxi.uni-wuerzburg.de>.
-     _________________________________________________________________
-   
-1. Leafnode does not compile on my system.
-
-   This most frequently seems to happen on Linux. The reason is that
-   Leafnode depends on some system-specific information which is usually
-   included in the sources of the kernel. Unfortunately, nowadays many
-   Linux distribution do not install kernel sources by default;
-   therefore, compilation of Leafnode (and most other programs as well)
-   will fail. The obvious solution is to install the kernel sources. If
-   compilation still does not work afterwards, complain to your
-   distributor. On Linux, if the kernel sources are installed in
-   /usr/src/linux-a.b.cc (with a.b.cc being the version number of your
-   kernel), create a symlink to /usr/src/linux.
-   
-2. I want to change my upstream server.
-
-   I have never done this myself, but leafnode should have no problems
-   with it. Assuming that your new server is called "new.upstream.server"
-   and your old server "old.upstream.server", I recommend following the
-   procedure outlined below:
-    1. Add the following lines to your config file:
-           server = new.upstream.server
-           maxfetch = 100
-       If you have already another maxfetch defined, reduce it
-       temporarily.
-    2. Run fetch.
-    3. Remove
-           server = old.upstream.server
-       and delete the "maxfetch" line that was introduced in step 1).
-       That's it.
-       
-3. I cannot connect to my newsserver.
-
-   Most likely your setup is incorrect. This can have several reasons.
-    1. inetd is not running. Check with
-           ps axu | grep inetd
-       inetd should be running once.
-       
-    2. inetd is running, but the entry in /etc/inetd.conf is incorrect.
-       
-         1. The nntp entry is not recognized.
-            Run "inetd -d" as root (finish with Ctrl-C). You should get
-            exactly one line starting like this:
-                ADD : nntp proto=tcp, ...
-            If this is not the case, the syntax of your entry in
-            /etc/inetd.conf is incorrect. Compare it with some other
-            entries. Most notably, it should not contain any leading
-            spaces.
-            
-         2. The nntp entry is recognized, but leafnode is not found or
-            has wrong permissions.
-            inetd will log attempts to invoke leafnode in some logfile,
-            usually /var/log/syslog or /var/log/messages (the exact name
-            depends on the setup of your /etc/syslog.conf). If an error
-            occurs when invoking leafnode, you can find out there what
-            exactly happened.
-       
-    3. inetd is running and the entry in /etc/inetd.conf is correct, but
-       the tcpd denies access to the server (in /var/log/messages you
-       will find something like "leafnode: connection refused from ...").
-       Check the entries in /etc/hosts.allow and /etc/hosts.deny. An
-       example for a correct entry is given in the INSTALL file.
-       
-    4. Another badly configured news server is already running on your
-       machine. Switch it off.
-       
-   You can test your setup by opening a telnet connection to your
-   newsserver. This is done by doing "telnet localhost 119". You should
-   get back something like
-   
-     200 Leafnode NNTP Daemon, version xx running at yy
-     
-   where xx is the version number and yy your hostname. Type "quit" after
-   seeing this message. If you don't get any connection at all or
-   something different, check through points 1-4 above.
-   
-4. tin complains about a missing file "/var/lib/news/active".
-
-   Either you have started the wrong version of tin (the one which tries
-   to read news directly from the spool) or your groupinfo file is
-   corrupt.
-   
-   In the first case, simply invoke tin with the -r flag: "tin -r". If
-   this does not help, try to rebuild the groupinfo file by starting
-   fetchnews with the -f flag.
-   
-5. When searching news with Netscape, I only get back "unknown command".
-
-   To search news, older versions of Netscape needed a news server which
-   supports the XPAT command. Leafnode does not. If you want to use
-   Netscape, you have to upgrade to version 4.5 and press the "options"
-   button which appears in the "search messages" window. In the box which
-   appears you have to select "on your local system".
-   
-6. fetchnews does not fetch any articles.
-
-   Here are the two most common occurences which cause this error:
-    1. Your groupinfo file is corrupt. Restart fetchnews with the -f
-       parameter.
-    2. /var/spool/news may have the wrong permissions. /var/spool/news
-       and all its subdirectories should be drwxrwsr-x and owned by user
-       and group news.
-       
-7. When fetching articles, the connection is interrupted by the pppd.
-
-   The article which causes the interruption contains three plus signs
-   ("+++") which is interpreted by a subset of modems as the beginning of
-   a command. You can either change the command introduction sequence or
-   switch off the command completely. Consult the instructions of your
-   modem to find out how this is done.
-   
-8. fetchnews crashes with a segmentation fault.
-
-   This should not happen. As a workaround, do the following: If
-   fetchnews crashes during posting, it helps to post the articles
-   separately (with "fetchnews -P"). If fetchnews crashes during reading
-   news, repeatedly calling it will often fetch all the articles.
-   
-9. My news reader complains about repeated frequent timeouts of the NNTP
-server.
-
-   Again, this is most likely the result of a corrupt groupinfo file.
-   Rebuild it by starting fetchnews with the -f parameter.
-   
-10. leafnode generates incorrect/incomplete message IDs.
-
-   First you should check whether it is indeed Leafnode which generates
-   the message ID. Leafnode will not touch any message IDs generated by
-   newsreaders (many of which generate message IDs themselves). A message
-   ID that is generated by leafnode has the following general appearance:
-       <local-part.ln@host-name>
-   The local-part is generated by Leafnode and you cannot influence it.
-   For host-name, Leafnode tries to figure out the name of your computer
-   by calling gethostname(2) and using the return value for a
-   gethostbyname(3) call. Therefore, if you set the name of your computer
-   correctly (using hostname(1) and domainname(1)) you should also get
-   correct message IDs.
-   
-   If you don't want to change the name of your machine, you can change
-   the part of the Message-ID behind the @ sign by putting "hostname =
-   correct.hostname" in your config file. For more information, see the
-   leafnode(8) man page.
-   
-11. fetchnews has problems retrieving new newsgroups.
-
-   Maybe your upstream server supports neither the "XGTITLE
-   news.group.name" nor the "LIST NEWSGROUPS news.group.name" command. In
-   this case, add "nodesc" to your server entry as described in
-   leafnode(8) and the config.example file.
-   
-12. texpire does not expire articles.
-
-   Run texpire with the -f parameter. This will expire articles somewhat
-   earlier because the time of last access on the files will be ignored.
-   If you have an urgent need to free some space in your spool directory,
-   reduce the expiry time in the config file and re-run texpire -f.
-   
-13. When running leafnode in "delaybody" mode, I can only view the headers
-with Netscape/Outlook Express.
-
-   This is a problem of Netscape and Outlook Express, not of Leafnode.
-   These programs store read articles in the cache and (for some odd
-   reason) refuse to reload an article that has been already read. To
-   force Netscape to reload articles, clear the cache (Options/Network
-   Preferences in version 3.0x). Better, get a sensible newsreader. (If
-   somebody has a solution for OE, please email me.)
-   
-14. I want to switch off the automatic expiring of newsgroups.
-
-   Run fetchnews with the -n parameter.
